--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <input id="search" name="search" placeholder="Search for a student" class="form-control" type="text" data-list=".selection" autocomplete="off">
         </div>
         <ul id="studentSelector" class="selection">
+            <li><a href="students/nadine/">Nadine</a></li>
+            <li><a href="students/clara/">Clara</a></li>
+            <li><a href="students/keya/">Keya</a></li>
             <li><a href="students/sammy">Sammy</a></li>
         </ul>
     </div>
