Week2 code club

--- a/students/keya/index.html
+++ b/students/keya/index.html
@@ -28,6 +28,7 @@
         </div>
         <ul id="studentSelector" class="selection_projects">
                 <li><a href="drawing_tool/">Drawing Tool</a></li>
+                <li><a href="apple_catcher/">Apple Catcher</a></li>
         </ul>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
