--- a/students/nadine/index.html
+++ b/students/nadine/index.html
@@ -28,6 +28,7 @@
         </div>
         <ul id="studentSelector" class="selection_projects">
                 <li><a href="the_square/">The Square</a></li>
+                <li><a href="mouse_move/">Mouse with Square</a></li>
         </ul>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
