--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <li><a href="students/nadine/">Nadine</a></li>
             <li><a href="students/clara/">Clara</a></li>
             <li><a href="students/keya/">Keya</a></li>
-            <li><a href="students/sammy">Sammy</a></li>
+            <li><a href="students/isabella/">Isabella</a></li>
+            <li><a href="students/eugenie">Eugenie</a></li>
+            <li><a href="students/sammy/">Sammy</a></li>
         </ul>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
