--- a/index.html
+++ b/index.html
@@ -5,12 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Code Club takes place every Thursday at St Marylebone School. At code club we teach a variety of skills to girls aged 11-16. Code Club is taught by sixth form students who take Computer Science. The primary teacher of Code Club for years 2017-2019 is Sammy Hass, an experienced programmer and Computer Science Scholar at St Marylebone."/>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="static/styles/main.css">
     <title>Marylebone Code Club</title>
-</head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126128358-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-126128358-1');
+    </script>
+
+
+    </head>
 
 <body>
     <nav class="navbar navbar-light bg-success">
@@ -42,6 +54,7 @@
             <li><a href="students/sammy/">Sammy</a></li>
         </ul>
     </div>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="static/javascripts/jquery.hideseek.min.js"></script>
 <script src="static/javascripts/index.js"></script>
