--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li><a href="students/clara/">Clara</a></li>
             <li><a href="students/keya/">Keya</a></li>
             <li><a href="students/isabella/">Isabella</a></li>
-            <li><a href="students/eugenie">Eugenie</a></li>
+            <li><a href="students/eugenie/">Eugenie</a></li>
             <li><a href="students/miranda/">Miranda</a></li>
         </ul>
     </div>
