--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <li><a href="students/keya/">Keya</a></li>
             <li><a href="students/isabella/">Isabella</a></li>
             <li><a href="students/eugenie/">Eugenie</a></li>
+            <li><a href="students/imogen">Imogen</a></li>
             <li><a href="students/miranda/">Miranda</a></li>
         </ul>
     </div>
